# CodeGraph

./: .gitignore  CLAUDE.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
evals/: agent_evals.yaml  run_evals.py
examples/: graphql_queries.py  index_a_repo.py  langchain_qa_demo.py  mcp_config.json
src/codegraph/: __init__.py  config.py  main.py
src/codegraph/analyzers/: __init__.py  base.py  js_analyzer.py  python_analyzer.py
src/codegraph/graph/: __init__.py  builder.py  queries.py  schema.py  store.py
src/codegraph/graphql/: __init__.py  app.py  schema.py
src/codegraph/langchain/: __init__.py  agent.py  qa_chain.py  retriever.py  tools.py
src/codegraph/mcp_server/: __init__.py  server.py
src/codegraph/rag/: __init__.py  docgen.py  embedders.py  indexer.py  retriever.py
src/codegraph/utils/: hashing.py  logging.py
tests/: conftest.py  test_agent.py  test_anti_hallucination.py  test_builder.py  test_graphql.py  test_hf_langchain.py  test_js_analyzer.py  test_mcp.py  test_new_features.py  test_python_analyzer.py  test_rag.py  test_store.py
tests/fixtures/sample_js_repo/: auth.js  models.js
tests/fixtures/sample_python_repo/: README.md  __init__.py  api.py  auth.py  models.py  utils.py
